[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/InteractionManager/InteractionManager.gd" type="Script" id=1]

[sub_resource type="CapsuleShape2D" id=1]

[node name="InteractionManager" type="Area2D"]
collision_layer = 2048
collision_mask = 2048
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_InteractionManager_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_InteractionManager_area_exited"]
